--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                </h3>
                <nav>
                 <ul>
-                    <li>    
+                    <li class = "story">    
                     <a href="/">Story Headline 1</a>
                         <p>
                             <img src="https://i.guim.co.uk/img/media/26392d05302e02f7bf4eb143bb84c8097d09144b/446_167_3683_2210/master/3683.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=49ed3252c0b2ffb49cf8b508892e452d" alt="Image of cat" width="100">
@@ -68,14 +68,18 @@
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
                     </p>
                     </li>
-                    <li><a href="/">Story Headline 2</a>
+                    <li class = "story">
+                    <a href="/">Story Headline 2</a>
                         <p>
+                            <img src="https://i.guim.co.uk/img/media/26392d05302e02f7bf4eb143bb84c8097d09144b/446_167_3683_2210/master/3683.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=49ed3252c0b2ffb49cf8b508892e452d" alt="Image of cat" width="100">
                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
                         </p>
                     </li>
-                    <li><a href="/">Story Headline 3</a>
+                    <li class = "story">
+                        <a href="/">Story Headline 3</a>
                         <p>
+                            <img src="https://i.guim.co.uk/img/media/26392d05302e02f7bf4eb143bb84c8097d09144b/446_167_3683_2210/master/3683.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=49ed3252c0b2ffb49cf8b508892e452d" alt="Image of cat" width="100">
                             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
                         </p>
